# filterjax

./: .buildinfo  README.md  examples.html  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  examples.doctree  index.doctree
.doctrees/nbsphinx/notebooks/: dog_sensor.ipynb  tracking_objects.ipynb
.doctrees/notebooks/: dog_sensor.doctree  gh_filter.doctree  tracking_objects.doctree
.github/workflows/: publish-docs.yml
_sources/: examples.rst  index.rst  index.rst.txt
_sources/notebooks/: dog_sensor.ipynb  gh_filter.ipynb  tracking_objects.ipynb
docs/: conf.py  dog_sensor.ipynb  gh_filter.ipynb  index.rst  styles.mplstyle
docs/notebooks/: dog_sensor.ipynb  gh_filter.ipynb  tracking_objects.ipynb
filterjax/: __init__.py  params.py
filterjax/filters/: __init__.py  gh_filter.py  kalman_filter.py
filterjax/gh/: __init__.py  gh_filter.py
filterjax/inference/: __init__.py  filters.py
filterjax/models/: __init__.py  kalman_filter.py  params.py
filterjax/plotting/: __init__.py  plot.py
notebooks/: dog_sensor.html  gh_filter.html  gh_filter.ipynb  tracking_objects.html  tracking_objects.ipynb
tests/: test_kalman_filter.py
